--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@
     padding-top: 0;
     padding: 25px;
     width: auto;
-    
-    
 }
 .navbar ul {
     text-align: center;
@@ -21,7 +19,6 @@
     font-style: normal;
     font-size:smaller;
 }
-
 ul{
    list-style: none; 
 }
@@ -41,8 +38,6 @@ ul{
     width: 100%;
     height:500px; 
 }
-
-
 .boxheader h1{
     text-align: left;
     text-transform: uppercase;
@@ -54,8 +49,7 @@ ul{
     text-align: left;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
-    color:#fb8e6f;
-      
+    color:#fb8e6f;     
 }
 .boxheader p{
     text-align: left;
@@ -64,13 +58,10 @@ ul{
     padding:25px;
     color:#c5d5d8;
     margin-block-start: auto;
-
 }
 .navbar{
 background-color:#c5d5d8;
-
 }
-
 .navbar label{
     background-color:#fb8e6f;
     color:#c5d5d8;
@@ -83,10 +74,12 @@ background-color:#c5d5d8;
     z-index: 2; 
 }
 .navbar label i{
-    margin-top: 5px;
-     transition: all .2s ease-in-out; 
+    margin-top: 5px; 
 }
-#burger:checked ~.menu navigation{
+#burger:checked ~.menudenavigation{
     display: flex;
     text-align: center;
+}
+#burger{
+    display: none;
 }
