--- a/style.css
+++ b/style.css
@@ -7,12 +7,9 @@
     display:flex;
     justify-content: space-between;
     align-items:baseline;
-    background:#124a85;
     padding-top: 0;
     padding: 25px;
     width: auto;
-}
-.navbar ul {
     text-align: center;
     color:#c5d5d8;
     font-family:Arial, Helvetica, sans-serif ;
@@ -26,14 +23,14 @@ ul{
     height:10%;
     width: 15%;
 }
-.navbar img logodsi{
+.navbar{
     display: flex;
     justify-content:space-between;
     align-items:baseline;
+    background-color:#124a85;
 }
 .boxheader{
     background:linear-gradient(#c5d5d8,#124a85);
-    ;
     padding-top: 0;
     width: 100%;
     height:500px; 
@@ -59,9 +56,6 @@ ul{
     color:#c5d5d8;
     margin-block-start: auto;
 }
-.navbar{
-background-color:#c5d5d8;
-}
 .navbar label{
     background-color:#fb8e6f;
     color:#c5d5d8;
@@ -73,8 +67,8 @@ background-color:#c5d5d8;
     right: 40px;
     z-index: 2; 
 }
-.navbar label i{
-    margin-top: 5px; 
+.navbar label{
+    display: none;
 }
 #burger:checked ~.menudenavigation{
     display: flex;
